# classic-demo-simple-shop

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
sources/simple_shop/adapters/api/: __init__.py  app.py  auth.py  controllers.py
sources/simple_shop/adapters/database/: __init__.py  engine.py  mapping.py  repositories.py  settings.py  tables.py
sources/simple_shop/adapters/mail_sending/: __init__.py  sender.py
sources/simple_shop/adapters/message_bus/: __init__.py  connection.py  consumer.py  scheme.py  settings.py
sources/simple_shop/adapters/shop_api/: __init__.py  app.py  auth.py  controllers.py  join_points.py
sources/simple_shop/application/: __init__.py  dataclasses.py  entities.py  errors.py  interfaces.py  services.py  signals.py
sources/simple_shop/composites/: shop_api.py  worker.py
sources/simple_shop/composites/container/: api.py  container.py  prepare.py  worker.py
sources/simple_shop/composites/manual/: api.py  worker.py
