[metadata]
name = classic-demo-medium-difficulty
version = 0.0.1
description = Demo of usage "classic" libs with Clean Architecture on medium difficulty
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_demo_medium_difficulty
project_urls =
    Bug Tracker = https://github.com/variasov/classic_demo_medium_difficulty/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
package_dir =
    = sources
install_require =
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-app-layer~=0.0.1
    classic-sql-storage~=0.0.1


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
