[metadata]
name = classic-demo-medium-difficulty
version = 0.0.1
description = Demo of usage "classic" libs with Clean Architecture on medium difficulty
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_demo_medium_difficulty
project_urls =
    Bug Tracker = https://github.com/variasov/classic_demo_medium_difficulty/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
package_dir =
    = sources
install_requires =
    attrs~=21.4
    pydantic~=1.9
    sqlalchemy~=1.4
    gunicorn~=20.1
    classic-components~=0.1
    classic-container~=0.1
    classic-error-handling~=0.1
    classic-validation~=0.1
    classic-persistence~=0.1
    classic-persistence-sqlalchemy~=0.1
    classic-messaging~=0.1
    classic-messaging-kombu~=0.1
    classic-http-api~=1.0


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2
    pytest-cov~=2.12
    twine~=3.4
    build~=0.7
